--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">TasksPro</string>
+    <string name="home">Home</string>
+    <string name="task">Task</string>
+    <string name="settings">Settings</string>
+    <string name="password_requiremenmt_character">
+        At least 8 characters
+    </string>
+    <string name="password_requirement_capital">
+        At least 1 upper-case letter
+    </string>
+    <string name="password_requirement_digital">
+        At least 1 digit
+    </string>
 </resources>
